Fixed table wrap

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -420,7 +420,7 @@ hr {
   clip-path: inset(50%);
   height: 1px;
   margin: -1px;
-  overflow: hidden;
+  overflow: clip; //formerly hidden
   padding: 0;
   position: absolute !important;
   width: 1px;
