--- a/themes/hello-4s3ti/assets/scss/_tables.scss
+++ b/themes/hello-4s3ti/assets/scss/_tables.scss
@@ -5,25 +5,26 @@
     font-size: 0.9em;
     min-width: 400px;
     max-width: 100%;
+    overflow-wrap: anywhere;
 
     th,
     td {
       padding: 12px 15px;
       // Default
       border: 1px solid $light-table-color;
-      
+
       @media (prefers-color-scheme: dark) {
         border: 1px solid $dark-table-color;
       }
-    
+
       @media (prefers-color-scheme: light) {
         border: 1px solid $light-table-color;
       }
-    
+
       [data-theme=dark] & {
         border: 1px solid $dark-table-color;
       }
-    
+
       [data-theme=light] & {
         border: 1px solid $light-table-color;
       }
@@ -40,17 +41,17 @@
           background-color: $dark-table-color;
           color: $dark-color;
         }
-      
+
         @media (prefers-color-scheme: light) {
           background-color: $light-table-color;
           color: $light-color;
         }
-      
+
         [data-theme=dark] & {
           background-color: $dark-table-color;
           color: $dark-color;
         }
-      
+
         [data-theme=light] & {
           background-color: $light-table-color;
           color: $light-color;
@@ -62,19 +63,19 @@
       tr {
         // Default
         border: 1px solid $light-table-color;
-        
+
         @media (prefers-color-scheme: dark) {
           border: 1px solid $dark-table-color;
         }
-      
+
         @media (prefers-color-scheme: light) {
           border: 1px solid $light-table-color;
         }
-      
+
         [data-theme=dark] & {
           border: 1px solid $dark-table-color;
         }
-      
+
         [data-theme=light] & {
           border: 1px solid $light-table-color;
         }
